--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:theme="@style/Theme.Bluesky_api_test"
         tools:targetApi="31">
 
+
         <activity
-            android:name=".MainActivity"
+            android:name=".TestMainActivity"
+            android:exported="false">
+        </activity>
+
+        <activity android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
