--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,7 @@
         tools:targetApi="31">
 
 
-        <activity
-            android:name=".TestMainActivity"
-            android:exported="false">
-        </activity>
+
 
         <activity android:name=".ui.LoginActivity"
             android:exported="true">
@@ -27,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
