--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".ui.MainActivity"
             android:exported="false"></activity>
+        <activity android:name=".ui.GroupActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
