feat: Add group editing feature base\n\n- Implement basic navigation from GroupFragment to GroupEditActivity on item click.\n- Create empty GroupEditActivity and its layout.\n- Register GroupEditActivity in AndroidManifest.\n- Enhance GroupAdapter with item click listener.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:exported="false"></activity>
         <activity android:name=".ui.GroupActivity"
             android:exported="false"></activity>
+        <activity android:name=".ui.GroupEditActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
