--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ log.txt
 /edit1.pngZone.Identifier
 /edit2.pngZone.Identifier
 /todo.txt
+/kotlin_files_content_core-sources.txt
+/kotlin_files_content_auth-sources.txt
+/README.md
