--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:exported="false"></activity>
         <activity android:name=".ui.PostSelectActivity"
             android:exported="false"></activity>
+        <activity android:name=".ui.PostViewActivity"
+            android:exported="false"></activity>
+        <activity android:name=".ui.TagViewActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
